crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_raw_comment_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..27
  HTML_BLOCK_RAW@0..27
    HTML_BLOCK_TAG@0..27
      TEXT@0..26 "<!-- raw block commen ..."
      NEWLINE@26..27 "\n"
